--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,41 @@ input[type="tel"]::placeholder {
     color: #aaa;
     font-style: italic;
 }
+table {
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 20px;
+    }
+    
+    table, th, td {
+        border: 1px solid #ccc;
+        padding: 10px;
+        text-align: left;
+    }
+    
+    th {
+        background-color: #f2f2f2;
+    }
+    
+    td {
+        background-color: #fff;
+    }
+}
+
+table, th, td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+td {
+    background-color: #fff;
+}
 
 footer {
     background-color: #333;
